# solutions-library

./: .gitignore  CODEOWNERS  README.md
async-batch-crusoe/: README.md  batch.py
b300-nccltest-cmk-mpijob/: Dockerfile  README.md  b300-288gb-sxm-ib-cloud-hypervisor.xml  nccl-test-one.yaml  nccl-test.yaml  run-nccl-test.sh
b300-torchtitan-llama31-8B-pytorchjob/: Dockerfile  setup-local-c4-datavol.yaml  torchtitan-llama3-8b-localdata.yaml  torchtitan-llama3-8b.yaml  torchtitan-llama31-8b-nopvc.yaml
cmk-amd-rocm-playpen/: README.md  hostfile  install.sh  launch-distributed.sh  launch-rccl.sh  pod-setup.sh  rocm-gpu-workload.yaml  train-distributed.py  train.py
cmk-as-oidc-provider/: pod-using-s3-with-oidc-sa.yaml
cmk-data-transfer/: .env.example  .gitignore  Makefile  README.md  requirements.txt
cmk-disable-node-hyperthreading/: Dockerfile  README.md  disable-ht.yaml  enable-ht.yaml
cmk-nccltests/: README.md  nccl-b200.yaml  nccl-gb200.yaml  nccl-h100.yaml  nccl-h200.yaml
create-vms-and-run-nccl-test/: .gitignore  README.md  hostfile.tpl  main.tf  nccltest.sh  nccltest_output.txt  terraform.tfvars  variables.tf
cross-region-shared-disk-data-transfer/: .gitignore  README.md  aria2c-download.py  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
crusoe-bastion-host/: .gitignore  README.md  SECURITY.md  deploy.sh
crusoe-code-reviewer-mcp-example/: .gitignore  ai_client.py  client.py
crusoe-kserve-example/: .gitignore  CLAUDE.md  Makefile  README.md
crusoe-managed-finetuning-example/: .env.example  .gitignore  README.md  requirements.txt  run-jupyter.py  run.py
crusoe-managed-kubernetes-logs-to-gcp/: README.md  fluent-bit-values.yaml  gcp-credentials-secret.yaml
langchain-crusoe/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
langchain-crusoe/langchain_crusoe/: __init__.py  chat_models.py
langchain-crusoe/tests/integration_tests/: conftest.py  test_chat_models.py  test_standard.py
langchain-crusoe/tests/unit_tests/: test_chat_models.py  test_standard.py
(+373 files in other folders)
