[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-crusoe"
version = "0.1.1"
description = "An integration package connecting Crusoe AI and LangChain"
authors = ["Crusoe Energy Systems <support@crusoe.ai>"]
readme = "README.md"
repository = "https://github.com/crusoecloud/langchain-crusoe"
license = "MIT"
include = ["langchain_crusoe/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = ">=0.3.15,<1.0"
langchain-openai = ">=0.3.0,<1.0"
openai = ">=1.10.0,<3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.0,<9.0.0"
pytest-asyncio = ">=0.21.1,<1.0.0"
pytest-watcher = ">=0.3.4,<1.0.0"
langchain-core = ">=0.3.15,<1.0"
langchain-tests = ">=0.3.0,<1.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
langchain-tests = ">=0.3.0,<1.0"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = ">=2.2.0,<3.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = ">=0.5,<1.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = ">=1.10,<2.0"
langchain-core = ">=0.3.15,<1.0"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/crusoecloud/langchain-crusoe"
"Release Notes" = "https://github.com/crusoecloud/langchain-crusoe/releases"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json'
